--- a/config/config-example.json
+++ b/config/config-example.json
@@ -3,5 +3,8 @@
     "staff_roles":[
         "ROLEID",
         "ROLEID"
-    ]
+    ],
+    "announce_channel": "Channel ID Here",
+    "main_channel": "Channel ID Here"
+
 }
