Fixed mention of channel on user join. Added logging

--- a/config/config-example.json
+++ b/config/config-example.json
@@ -5,6 +5,7 @@
         "ROLEID"
     ],
     "announce_channel": "Channel ID Here",
-    "main_channel": "Channel ID Here"
+    "main_channel": "Channel ID Here",
+    "welcome_channel": "Channel ID Here"
 
 }
