--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Wirenut Official Discord Bot",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^11.1.0",
-    "eris": "^0.7.1",
+    "bufferutil": "^3.0.3",
+    "discord.js": "^11.3.0",
+    "erlpack": "github:discordapp/erlpack",
     "node-opus": "^0.2.6",
+    "opusscript": "0.0.6",
     "run-queue": "^1.0.3",
+    "simple-rcon": "^0.3.1",
     "youtube-audio-stream": "^0.0.48"
   },
   "devDependencies": {},
