Added whitelist functionality.

--- a/config/config-example.json
+++ b/config/config-example.json
@@ -10,8 +10,7 @@
 	"whitelist_channel": "Channel ID Here",
 	"db": {
 		"host": "",
-		"port": "3389",
-		"username": "",
+		"user": "",
 		"password": "",
 		"database": ""
 	}
