--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
-config/config.json
-config/commands.json
+config.json
+
 
 package-lock.json
 *.bak
